extend File, FileRepository, and related services to include support for InventoryItem relationship; add new methods for reviewed status filtering and sorting; enhance TreeGridHelper and UI components for new functionalities; update Liquibase changelog; refactor FileContentService, #45